# ACP

./: .gitignore  cars.csv  config.sh  generate  problem.csv
docs/OpenMP/: CMakeLists.txt  mandelbrot-2.cpp  mandelbrot.cpp  matrix-multiply-2.cpp  matrix-multiply-3.cpp  matrix-multiply-4.cpp  matrix-multiply-5.cpp  matrix-multiply-6.cpp  matrix-multiply-7.cpp  matrix-multiply.cpp  parallel-2.cpp  parallel-3.cpp  parallel.cpp  var-types.cpp
source/: CMakeLists.txt  build.sh  hello.cpp  ideas.cpp  main.cpp  matrix.cpp  matrix.h  run.sh  submit.sh
